src-sjc/sjc/parser/StaticJavaASTParser.java
// $ANTLR 3.4 /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g 2012-11-15 19:51:55

package sjc.parser;

import org.eclipse.jdt.core.dom.*;

import java.math.BigInteger;

import java.util.ArrayList;

/**
 * StaticJava parser.
 *
 * @author robby
 */


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class StaticJavaASTParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "NUM_INT", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'boolean'", "'class'", "'else'", "'false'", "'if'", "'int'", "'public'", "'return'", "'static'", "'true'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int ID=4;
    public static final int NUM_INT=5;
    public static final int WS=6;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public StaticJavaASTParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public StaticJavaASTParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[70+1];
         

    }

    public String[] getTokenNames() { return StaticJavaASTParser.tokenNames; }
    public String getGrammarFileName() { return "/home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g"; }


    	protected AST ast = AST.newAST(AST.JLS3);



    // $ANTLR start "compilationUnit"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:37:1: compilationUnit returns [CompilationUnit result = ast.newCompilationUnit()] : td= classDefinition EOF ;
    public final CompilationUnit compilationUnit() throws RecognitionException {
        CompilationUnit result =  ast.newCompilationUnit();

        int compilationUnit_StartIndex = input.index();

        TypeDeclaration td =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:38:2: (td= classDefinition EOF )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:38:4: td= classDefinition EOF
            {
            pushFollow(FOLLOW_classDefinition_in_compilationUnit53);
            td=classDefinition();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result.types().add(td); }

            match(input,EOF,FOLLOW_EOF_in_compilationUnit76); if (state.failed) return result;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "compilationUnit"



    // $ANTLR start "classDefinition"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:42:1: classDefinition returns [TypeDeclaration result = ast.newTypeDeclaration()] : 'public' 'class' ID '{' md= mainMethodDeclaration (fd= fieldDeclaration |md= methodDeclaration )* '}' ;
    public final TypeDeclaration classDefinition() throws RecognitionException {
        TypeDeclaration result =  ast.newTypeDeclaration();

        int classDefinition_StartIndex = input.index();

        Token ID1=null;
        MethodDeclaration md =null;

        FieldDeclaration fd =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:43:2: ( 'public' 'class' ID '{' md= mainMethodDeclaration (fd= fieldDeclaration |md= methodDeclaration )* '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:43:4: 'public' 'class' ID '{' md= mainMethodDeclaration (fd= fieldDeclaration |md= methodDeclaration )* '}'
            {
            match(input,34,FOLLOW_34_in_classDefinition92); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.modifiers().add(ast.newModifier(Modifier.ModifierKeyword.PUBLIC_KEYWORD)); }

            match(input,29,FOLLOW_29_in_classDefinition122); if (state.failed) return result;

            ID1=(Token)match(input,ID,FOLLOW_ID_in_classDefinition124); if (state.failed) return result;

            match(input,40,FOLLOW_40_in_classDefinition126); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setName(ast.newSimpleName((ID1!=null?ID1.getText():null))); }

            pushFollow(FOLLOW_mainMethodDeclaration_in_classDefinition160);
            md=mainMethodDeclaration();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result.bodyDeclarations().add(md); }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:46:3: (fd= fieldDeclaration |md= methodDeclaration )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==36) ) {
                    switch ( input.LA(2) ) {
                    case 28:
                        {
                        int LA1_3 = input.LA(3);

                        if ( (LA1_3==ID) ) {
                            int LA1_6 = input.LA(4);

                            if ( (LA1_6==11) ) {
                                alt1=2;
                            }
                            else if ( (LA1_6==19) ) {
                                alt1=1;
                            }


                        }


                        }
                        break;
                    case 33:
                        {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==ID) ) {
                            int LA1_6 = input.LA(4);

                            if ( (LA1_6==11) ) {
                                alt1=2;
                            }
                            else if ( (LA1_6==19) ) {
                                alt1=1;
                            }


                        }


                        }
                        break;
                    case 38:
                        {
                        alt1=2;
                        }
                        break;

                    }

                }


                switch (alt1) {
            	case 1 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:46:5: fd= fieldDeclaration
            	    {
            	    pushFollow(FOLLOW_fieldDeclaration_in_classDefinition182);
            	    fd=fieldDeclaration();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { result.bodyDeclarations().add(fd); }

            	    }
            	    break;
            	case 2 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:47:5: md= methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_classDefinition210);
            	    md=methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { result.bodyDeclarations().add(md); }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,42,FOLLOW_42_in_classDefinition239); if (state.failed) return result;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, classDefinition_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "classDefinition"



    // $ANTLR start "mainMethodDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:53:1: mainMethodDeclaration returns [MethodDeclaration result = ast.newMethodDeclaration()] : 'public' 'static' 'void' id1= ID {...}? '(' id2= ID {...}? '[' ']' id3= ID ')' '{' b= methodBody '}' ;
    public final MethodDeclaration mainMethodDeclaration() throws RecognitionException {
        MethodDeclaration result =  ast.newMethodDeclaration();

        int mainMethodDeclaration_StartIndex = input.index();

        Token id1=null;
        Token id2=null;
        Token id3=null;
        Block b =null;



        	SingleVariableDeclaration svd = ast.newSingleVariableDeclaration();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:57:2: ( 'public' 'static' 'void' id1= ID {...}? '(' id2= ID {...}? '[' ']' id3= ID ')' '{' b= methodBody '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:57:4: 'public' 'static' 'void' id1= ID {...}? '(' id2= ID {...}? '[' ']' id3= ID ')' '{' b= methodBody '}'
            {
            match(input,34,FOLLOW_34_in_mainMethodDeclaration260); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.modifiers().add(ast.newModifier(Modifier.ModifierKeyword.PUBLIC_KEYWORD)); }

            match(input,36,FOLLOW_36_in_mainMethodDeclaration297); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.modifiers().add(ast.newModifier(Modifier.ModifierKeyword.STATIC_KEYWORD)); }

            match(input,38,FOLLOW_38_in_mainMethodDeclaration334); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setReturnType2(ast.newPrimitiveType(PrimitiveType.VOID)); }

            id1=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration375); if (state.failed) return result;

            if ( !(("main".equals((id1!=null?id1.getText():null)))) ) {
                if (state.backtracking>0) {state.failed=true; return result;}
                throw new FailedPredicateException(input, "mainMethodDeclaration", "\"main\".equals($id1.text)");
            }

            if ( state.backtracking==0 ) { result.setName(ast.newSimpleName("main")); }

            match(input,11,FOLLOW_11_in_mainMethodDeclaration389); if (state.failed) return result;

            id2=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration396); if (state.failed) return result;

            if ( !(("String".equals((id2!=null?id2.getText():null)))) ) {
                if (state.backtracking>0) {state.failed=true; return result;}
                throw new FailedPredicateException(input, "mainMethodDeclaration", "\"String\".equals($id2.text)");
            }

            if ( state.backtracking==0 ) { svd.setType(ast.newArrayType(ast.newSimpleType(ast.newSimpleName("String")))); }

            match(input,26,FOLLOW_26_in_mainMethodDeclaration407); if (state.failed) return result;

            match(input,27,FOLLOW_27_in_mainMethodDeclaration409); if (state.failed) return result;

            id3=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration413); if (state.failed) return result;

            if ( state.backtracking==0 ) { svd.setName(ast.newSimpleName((id3!=null?id3.getText():null)));
            		                                          result.parameters().add(svd); }

            match(input,12,FOLLOW_12_in_mainMethodDeclaration444); if (state.failed) return result;

            match(input,40,FOLLOW_40_in_mainMethodDeclaration446); if (state.failed) return result;

            pushFollow(FOLLOW_methodBody_in_mainMethodDeclaration450);
            b=methodBody();

            state._fsp--;
            if (state.failed) return result;

            match(input,42,FOLLOW_42_in_mainMethodDeclaration452); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setBody(b); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, mainMethodDeclaration_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "mainMethodDeclaration"



    // $ANTLR start "fieldDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:69:1: fieldDeclaration returns [FieldDeclaration result = null] : 'static' fieldType= type ID ';' ;
    public final FieldDeclaration fieldDeclaration() throws RecognitionException {
        FieldDeclaration result =  null;

        int fieldDeclaration_StartIndex = input.index();

        Token ID2=null;
        Type fieldType =null;



        	VariableDeclarationFragment vdf = ast.newVariableDeclarationFragment();;
        	result = ast.newFieldDeclaration(vdf);

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:74:2: ( 'static' fieldType= type ID ';' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:74:4: 'static' fieldType= type ID ';'
            {
            match(input,36,FOLLOW_36_in_fieldDeclaration490); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.modifiers().add(ast.newModifier(Modifier.ModifierKeyword.STATIC_KEYWORD)); }

            pushFollow(FOLLOW_type_in_fieldDeclaration530);
            fieldType=type();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setType(fieldType); }

            ID2=(Token)match(input,ID,FOLLOW_ID_in_fieldDeclaration562); if (state.failed) return result;

            if ( state.backtracking==0 ) { vdf.setName(ast.newSimpleName(ID2.getText())); }

            match(input,19,FOLLOW_19_in_fieldDeclaration605); if (state.failed) return result;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, fieldDeclaration_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "fieldDeclaration"



    // $ANTLR start "methodDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:80:1: methodDeclaration returns [MethodDeclaration result = ast.newMethodDeclaration()] : 'static' retType= returnType ID '(' (sdvs= params )? ')' '{' b= methodBody '}' ;
    public final MethodDeclaration methodDeclaration() throws RecognitionException {
        MethodDeclaration result =  ast.newMethodDeclaration();

        int methodDeclaration_StartIndex = input.index();

        Token ID3=null;
        Type retType =null;

        ArrayList<SingleVariableDeclaration> sdvs =null;

        Block b =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:81:2: ( 'static' retType= returnType ID '(' (sdvs= params )? ')' '{' b= methodBody '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:81:4: 'static' retType= returnType ID '(' (sdvs= params )? ')' '{' b= methodBody '}'
            {
            match(input,36,FOLLOW_36_in_methodDeclaration621); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.modifiers().add(ast.newModifier(Modifier.ModifierKeyword.STATIC_KEYWORD)); }

            pushFollow(FOLLOW_returnType_in_methodDeclaration661);
            retType=returnType();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setReturnType2(retType); }

            ID3=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration688); if (state.failed) return result;

            match(input,11,FOLLOW_11_in_methodDeclaration690); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setName(ast.newSimpleName((ID3!=null?ID3.getText():null))); }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:84:3: (sdvs= params )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==28||LA2_0==33) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:85:4: sdvs= params
                    {
                    pushFollow(FOLLOW_params_in_methodDeclaration733);
                    sdvs=params();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result.parameters().addAll(sdvs); }

                    }
                    break;

            }


            match(input,12,FOLLOW_12_in_methodDeclaration770); if (state.failed) return result;

            match(input,40,FOLLOW_40_in_methodDeclaration772); if (state.failed) return result;

            pushFollow(FOLLOW_methodBody_in_methodDeclaration776);
            b=methodBody();

            state._fsp--;
            if (state.failed) return result;

            match(input,42,FOLLOW_42_in_methodDeclaration778); if (state.failed) return result;

            if ( state.backtracking==0 ) { result.setBody(b); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, methodDeclaration_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "methodDeclaration"



    // $ANTLR start "type"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:90:1: type returns [Type result = null] : ( 'boolean' | 'int' );
    public final Type type() throws RecognitionException {
        Type result =  null;

        int type_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:91:2: ( 'boolean' | 'int' )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==28) ) {
                alt3=1;
            }
            else if ( (LA3_0==33) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:91:4: 'boolean'
                    {
                    match(input,28,FOLLOW_28_in_type811); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = ast.newPrimitiveType(PrimitiveType.BOOLEAN); }

                    }
                    break;
                case 2 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:92:4: 'int'
                    {
                    match(input,33,FOLLOW_33_in_type848); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = ast.newPrimitiveType(PrimitiveType.INT); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, type_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "type"



    // $ANTLR start "returnType"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:95:1: returnType returns [Type result = null] : ( 'void' |t= type );
    public final Type returnType() throws RecognitionException {
        Type result =  null;

        int returnType_StartIndex = input.index();

        Type t =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:96:2: ( 'void' |t= type )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==38) ) {
                alt4=1;
            }
            else if ( (LA4_0==28||LA4_0==33) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:96:4: 'void'
                    {
                    match(input,38,FOLLOW_38_in_returnType900); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = ast.newPrimitiveType(PrimitiveType.VOID); }

                    }
                    break;
                case 2 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJavaAST.g:97:4: t= type
                    {
                    pushFollow(FOLLOW_type_in_returnType940);
                    t=type();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = t; }
